# tty.app

./: .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  COLOR.md  COV.md  CRASH.md  Cargo.toml  Info.plist  LICENSE  Makefile  NEXT.md  PERF.md  PGO.md  README.md  VT.md  build.rs  bump-version.sh  justfile  plan-detailed.md  plan.md  release.sh  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: build.yml  release.yml
benches/: baselines.json  bench.rs
benchmarks/: baseline.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parser.rs
scripts/: bench-baseline.sh  profile.sh  record-tmux-less.sh
scripts/colors/: 24-bit-color.sh  color-test.sh
src/: app_render.rs  clipboard.rs  config.rs  input.rs  lib.rs  main.rs  perform_shared.rs  performer.rs  renderer_trait.rs  unicode.rs  window.rs
src/parser/: charset.rs  csi_fast.rs  mod.rs  perform.rs  simd.rs  state_machine.rs  table.rs  utf8.rs
src/pty/: mod.rs
src/renderer/: atlas.rs  core.rs  font.rs  metal.rs  mod.rs  shader.metal
src/terminal/: cell.rs  grid.rs  mod.rs  scrollback.rs
tests/: app.rs  charset.rs  clipboard.rs  config.rs  csi_fast.rs  headless_metal.rs  performer.rs  proptest_grid.rs  renderer.rs  scrollback.rs  terminal.rs  tmux_clipboard.rs  utf8_assembler.rs
