[package]
name = "tty"
version = "0.1.13"
edition = "2024"
build = "build.rs"

[dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-core-foundation = { version = "0.3", default-features = false, features = ["std", "CFCGTypes", "CFDate", "CFFileDescriptor", "CFRunLoop"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSArray", "NSData", "NSObjCRuntime", "NSRunLoop", "NSGeometry"] }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSView", "NSResponder", "NSPasteboard", "NSApplication", "NSEvent", "NSGraphics", "NSScreen", "NSWindow", "NSRunningApplication", "objc2-core-foundation"] }
objc2-metal = { version = "0.3", default-features = false, features = ["std", "block2", "objc2-core-foundation", "MTLAllocation", "MTLBlitCommandEncoder", "MTLBuffer", "MTLCommandBuffer", "MTLCommandEncoder", "MTLCommandQueue", "MTLComputeCommandEncoder", "MTLComputePipeline", "MTLDevice", "MTLDrawable", "MTLLibrary", "MTLPipeline", "MTLPixelFormat", "MTLResource", "MTLTexture", "MTLTypes"] }
objc2-quartz-core = { version = "0.3", default-features = false, features = ["std", "objc2-core-foundation", "CALayer", "CAMetalLayer", "objc2-metal"] }
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
bitvec = "1"
core-graphics = "0.25"
core-text = "22"
libc = "0.2"
rustix = { version = "1.1.4", features = ["event", "fs", "process", "termios"] }
rustc-hash = "2"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[test]]
name = "clipboard"
harness = false

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.release]
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
